corrects hero text and button alignment and margin

--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -8,3 +8,10 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 }
+
+@mixin button-styles {
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+    border: none;
+}
