--- a/sass/partials/sections/_hero.scss
+++ b/sass/partials/sections/_hero.scss
@@ -1,12 +1,14 @@
 /*========== HERO ============*/
 .hero-wrapper {
-    // border: 5px solid black;
     @media screen and (max-width: $break-m) {
         height: calc(100vh - 168px);
     }
     //Medium devices
     @media screen and (min-width: $break-m) {
         height: calc(100vh - 110px);
+    }
+    @media screen and (min-width: $break-lg) {
+        height: calc(100vh - 209px);
     }
 }
 
@@ -19,27 +21,42 @@
     background-size: cover;
     background-position: center;
     object-fit: none;
-    // //Up to medium devices 
-    // @media screen and (max-width: $break-m) {
-
-    // }
-    //Medium devices
-    @media screen and (min-width: $break-m) {
-        
+    display: flex;
+    //Up to Large
+    @media screen and (max-width: $break-lg) {
+    justify-content: center;
+    align-items: center;
     }
-    //Large devices
+    //Large and Up
     @media screen and (min-width: $break-lg) {
+    justify-content: flex-start;
+    align-items: center;
     }
-    // //X-large devices
-    // @media screen and (min-width: $break-xl) {
-        
-    // }
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+    
+    }
 }
 
 .hero-text-wrapper {
-    padding: 55% 5%;
-    @media screen and (min-width: $break-xs) {
-        
+    // padding: 55% 5%;
+    //Up to Large
+    display: flex;
+    //Up to Large
+    @media screen and (max-width: $break-lg) {
+    margin: auto 5%;
+    flex-direction: column;
+    align-items: center;
+    }
+    //Large and Up
+    @media screen and (min-width: $break-lg) {
+    margin-left: 3%;
+    flex-direction: column;
+    align-items: start;
+    }
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+    margin-left: 10% ;
     }
 }
 
@@ -48,6 +65,10 @@
     color: $white;
     text-align: center;
     font-weight: 400;
+    //Large and Up
+    @media screen and (min-width: $break-lg) {
+    text-align: left;
+    }
 }
 
 .hero-title {
@@ -61,13 +82,14 @@
     margin-bottom: 2.5rem;
 }
 
+.hero-button-wrapper {
+
+}
+
 .hero-button {
     background-color: $web;
     color: $white;
-    text-decoration: none;
-    text-transform: uppercase;
-    white-space: nowrap;
-    border: none;
+    @include button-styles;
     &:hover {
         background-color: $web-dark;
     }
