--- a/sass/partials/sections/clients.scss
+++ b/sass/partials/sections/clients.scss
@@ -2,4 +2,26 @@
 .clients {
     border: 1px solid purple;
     height: 20vh;
+    @media screen and (max-width: $break-s) {
+    
+    }
+    //Medium and up
+    @media screen and (min-width: $break-s) {
+      .clients {
+          display: none !important;
+      }
+      .awards {
+          display: none !important;
+      }
+    }
+    //Large and Up
+    @media screen and (min-width: $break-lg) {
+      .clients {
+          display: none;
+      }
+    }
+    //Extra Large
+    @media screen and (min-width: $break-xl) {
+      
+    }
 }
