--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,45 +12,22 @@
         'partials/sections/footer',
         'partials/sections/awards';
 
-
-
-
-
-
-
-
-
-
-
 /*========== MEDIA QUERIES ===*/
+//Template
 
-@media screen and (max-width: 576px) {
+//Up to Medium
+@media screen and (max-width: $break-m) {
     
   }
-
-@media screen and (min-width: 576px) {
-    .clients {
-        display: none !important;
-    }
-    .awards {
-        display: none !important;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .clients {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 992px) {
+//Medium and up
+@media screen and (min-width: $break-m) {
     
 }
+//Large and Up
+@media screen and (min-width: $break-lg) {
 
-@media screen and (min-width: 1200px) {
-    
 }
-
-@media screen and (min-width: 1400px) {
+//Extra Large
+@media screen and (min-width: $break-xl) {
     
 }
